--- a/about-me.html
+++ b/about-me.html
@@ -9,7 +9,7 @@
         .myDiv {
   border: 5px outset rgb(165, 24, 111);
   background-color: rgb(230, 173, 218); 
-  text-align: left;
+  text-align: center;
         }
 
         h1 {
